fix: slogan text overflowing

--- a/react-app/src/css/accessories.css
+++ b/react-app/src/css/accessories.css
@@ -1,6 +1,6 @@
 .card-list {
     height: 70svh;
-    width: 100%;
+    width: 100svw;
     display: flex;
     overflow-x: scroll;
 }
